[package]
name = "aydee"
version = "0.1.0"
edition = "2021"
description = "Active Directory enumeration tool"
authors = ["kyakei"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "dns-over-rustls"] }
colored = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rpassword = "7"
